--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # `jekyll serve`. If you change this file, please restart the server process.
 
 # Site Settings
-title                    : "Hong Huang"
+title                    : "Hong Huang (黄宏)"
 # description              : " "
 repository               : "hongh0/hongh0.github.io"
 google_scholar_stats_use_cdn : true
