--- a/_config.yml
+++ b/_config.yml
@@ -23,8 +23,8 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 author:
   name             : "Hong Huang"
   avatar           : "images/myself.png"
-  bio              : "Shandong University"
-  location         : "Shandong, China"
+  bio              : "Westlake University"
+  location         : "Hangzhou, Zhejiang, China"
   employer         :
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=sKXgCS8AAAAJ"
